syntax = "proto3";

package Subject;

service SubjectService {
    rpc GetAll(Empty) returns (SubjectList);
    rpc GetAllRelationships(Empty) returns (SubjectRelationshipList);
    rpc GetPreRequisitesMap(Empty) returns (SubjectPreRequisiteList);
    rpc GetPostRequisitesMap(Empty) returns (SubjectPostRequisiteList);
}

message Subject {   
    string Code = 1;
    string Name = 2;
    string Department = 3;
    int32 Credits = 4;
    int32 Semester = 5;
}

message SubjectList {
    repeated Subject Subjects = 1;
}

message SubjectRelationship {
    string SubjectCode = 1;
    string PreSubjectCode = 2;
}

message SubjectRelationshipList {
    repeated SubjectRelationship SubjectRelationships = 1;
}

message SubjectPreRequisite {
    string SubjectCode = 1;
    repeated string PreRequisiteCodes = 2;
}

message SubjectPreRequisiteList {
    repeated SubjectPreRequisite SubjectPreRequisites = 1;
}

message SubjectPostRequisite {
    string SubjectCode = 1;
    repeated string PostRequisiteCodes = 2;
}

message SubjectPostRequisiteList {
    repeated SubjectPostRequisite SubjectPostRequisites = 1;
}

message Empty {}

